{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "651f2ee8-121f-42aa-a296-451c70bd5836",
            "actions": [
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "67945413-36ed-43dc-a458-9f07621a387d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FocusOnUnit1",
                    "type": "Button",
                    "id": "97937d81-e8da-4c1e-8699-3b41dc0e3184",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FocusOnUnit2",
                    "type": "Button",
                    "id": "8e7212db-5b9c-48d4-8299-a0db63fb91ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FocusOnUnit3",
                    "type": "Button",
                    "id": "4ee83596-3b9b-4281-b883-a2fe4002dac6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FocusOnUnit4",
                    "type": "Button",
                    "id": "4cef47e3-3ba1-4fe0-837e-70aab3389ac2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnitUseAbility",
                    "type": "Button",
                    "id": "117f0f13-dc0b-4e6c-86d2-c30721853eaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnitAttack",
                    "type": "Button",
                    "id": "7c18e6cb-ea33-4c6c-a652-dcb798d923a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnitMove",
                    "type": "Button",
                    "id": "58210f48-6015-4a9f-8757-90b351edf906",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnitStopEverything",
                    "type": "Button",
                    "id": "5ec69662-5da1-48e2-a443-00aca4542759",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3ff01b8d-5907-48f5-a10c-46c1b954ae7f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e31af596-bdf7-4077-bac0-bdb9514f6904",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d55d6f6b-183e-46a8-bf39-767c4a0a52b7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "47aba44b-0060-4a16-90bb-d4d835bf3d3f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1b9f95dc-8acb-4375-8e3b-32a69019be20",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1e26101d-9404-4de0-86dd-645543381a0b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnUnit1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55ae89e6-6a45-4fce-a7b0-63350cb41572",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnUnit2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f967c2bc-b6ca-48a0-b94a-8d751b5f1853",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnUnit3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a05d6d2-cfe5-4d7d-9042-99d1d37ae6e8",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnUnit4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea7bc9a7-4a79-4b19-9d2f-681bf63e0e39",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnitUseAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a52a539-50ab-4874-b0ae-55411de0ea25",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnitAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9074b313-1cb0-439d-bc7f-b5757a84c9f9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnitMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "961ea798-9ff7-4e69-af1b-f019c867f876",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnitStopEverything",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}